<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:minHeight="300dp" android:minWidth="300dp">

        <View
            android:id="@+id/view"
            android:layout_width="0dp" android:layout_height="64dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:padding="4dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar_placeholder"/>

        <TextView
            android:id="@+id/companyTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/company_not_registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/view"/>
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            android:text="@string/no_name" android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/loginIdTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="login ID"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView"/>
        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/location_not_registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/companyTextView"/>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/email_not_registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/locationTextView"/>
        <TextView
            android:id="@+id/blogTextView"
            android:layout_width="0dp" android:layout_height="19dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/blog_not_registered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/avatarImageView"
            app:layout_constraintTop_toBottomOf="@+id/emailTextView"/>
        <Button
            android:id="@+id/dismissButton"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="24dp"
            android:text="dismiss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hireableTextView"/>
        <TextView
            android:id="@+id/followStatusTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="24dp" android:text="@string/follow_status"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/blogTextView"/>
        <TextView
            android:id="@+id/repoStatusTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/repo_status"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/followStatusTextView"/>
        <TextView
            android:id="@+id/hireableTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp" android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:text="@string/not_hireable"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repoStatusTextView"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
